tests/compile_fail/add_assign/union.stderr
error: `AddAssign` cannot be derived for unions
 --> tests/compile_fail/add_assign/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
